apps/grafana/grafana/templates/ingress.yaml
---
# Source: grafana/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-5-3-0
  namespace: grafana
  labels:
    helm.sh/chart: grafana-5.3.0
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana-5-3-0
    app.kubernetes.io/version: "7.0.3"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: grafana.gw-cloud.org
      http:
        paths:

          - path: /
            backend:
              serviceName: grafana-5-3-0
              servicePort: 80
